syntax = "proto3";
package com.example.greeting;

option java_multiple_files = true;
option java_package = "com.example.greeting";

service GreetingService {

  rpc greeting(GreetingRequest) returns (GreetingResponse) {
  }

  rpc getAsyncGreeting(GreetingRequest) returns(stream Greeting) {
  }

}

message GreetingRequest {

  string name = 1;
  string message = 2;

}

message GreetingResponse {

  string message = 1;

}

message Greeting {

  string name = 1;
  string message = 2;

}

